--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
         <p>LDS Money Management</p>
         <p>Terraria - All Item ID Fetcher</p>
         <p>(WIP): Random Name Generator</p>
+        <a href="file.txt">Download Test</a>
     </body>
 </html>
