--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <p>Terraria - All Item ID Fetcher</p>
         <p>(WIP): Random Name Generator</p>
         <a href="file.txt">Download Test</a>
+        <p>Test</p>
     </body>
 </html>
