--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <p>LDS Money Management</p>
         <p>Terraria - All Item ID Fetcher</p>
         <p>(WIP): Random Name Generator</p>
-        <a href="file.txt">Download Test</a>
-        <p>Test</p>
+        <a href="D:\Other Programs\Budget Cookie Clicker" download="download">Download Test</a>
+        <p>Test2</p>
     </body>
 </html>
