index.html rewrite
redid the entire thing

--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>Stuff I've made:</h1>
-        <p>Cookie Clicker</p>
-        <p>LDS Money Management</p>
-        <p>Terraria - All Item ID Fetcher</p>
-        <p>(WIP): Random Name Generator</p>
-        <a href="https://github.com/MojoDallin/Projects-Made/archive/refs/heads/gh-pages.zip">Download Them Here!</a>
+        <h1>MojoDallin's GitHub Page</h1>
+        <h3>About</h3>
+        <p>Hey! I'm MojoDallin, and here's a bit about me: </p>
+        <ul>
+            <li>I am currently 20 years old ('05).</li>
+            <li>I am serving a mission for the Church of Jesus Christ of Latter-Day Saints in Sydney, Australia from March '25 to April '27. <a href="https://comeuntochrist.org">Learn more!</a></li>
+            <li>In my freetime, I enjoy programming and playing videogames.</li>
+            <li>My top three favorite videogames are:
+                <ol>
+                    <li>Terraria</li>
+                    <li>Factorio</li>
+                    <li>Stardew Valley</li>
+                </ol>
+                Honorable mentions include Minecraft and Starbound.
+            </li>
+            <li>My favorite movie is Sonic the Hedgehog 3. A close second is Iron Man 1.</li>
+        </ul>
+        <h3>Contact</h3>
+        <p>Email me at dallin.schmidt@missionary.org. I will get back to you as soon as I can.</p>
     </body>
 </html>
