--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html>
+    <style>
+        body {
+            font-size: 18px;
+            background: #F19028;
+            color: #7CF0FF;
+            text-shadow: 0px 0px 2px black;
+            border: 5px solid #419341;
+            text-align: center;
+        }
+        h1 {
+            font-style: italic;
+        }
+        ul {
+            list-style-position: inside;
+        }
+    </style>
+    <head>
+        <title>MojoDallin's Page</title>
+    </head>
     <body>
-        <h1>MojoDallin's GitHub Page</h1>
+        <h1>MojoDallin's Page</h1>
         <h3>About</h3>
         <p>Hey! I'm MojoDallin, and here's a bit about me: </p>
         <ul>
             <li>I am currently 20 years old ('05).</li>
-            <li>I am serving a mission for the Church of Jesus Christ of Latter-Day Saints in Sydney, Australia from March '25 to April '27. <a href="https://comeuntochrist.org">Learn more!</a></li>
-            <li>In my freetime, I enjoy programming and playing videogames.</li>
+            <li>I am serving a mission for the Church of Jesus Christ of Latter-Day Saints in Sydney, Australia from March '25 to April '27. <a href="https://comeuntochrist.org" target="_blank">Learn more!</a></li>
+            <li>In my freetime, I enjoy programming, playing videogames, and drawing.</li>
             <li>My top three favorite videogames are:
                 <ol>
                     <li>Terraria</li>
@@ -18,6 +37,14 @@
             </li>
             <li>My favorite movie is Sonic the Hedgehog 3. A close second is Iron Man 1.</li>
         </ul>
+        <h3>Interesting Facts</h3>
+        <h6>I don't really know why you'd want to know these things, but here they are regardless.
+            <ul>
+                <li>I have no siblings.</li>
+                <li>I grew up in New York.</li>
+                <li>I usually enjoy doing math. I'm sorry.</li>
+                <li>I wear glasses mainly for aesthetic reasons. They do help, but it's almost unnoticable.</li>
+            </ul>
         <h3>Contact</h3>
         <p>Email me at dallin.schmidt@missionary.org. I will get back to you as soon as I can.</p>
     </body>
