fix some styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             text-shadow: 0px 0px 2px black;
             border: 5px solid #419341;
             text-align: center;
+            font-family: cursive;
         }
         h1 {
             font-style: italic;
@@ -38,7 +39,7 @@
             <li>My favorite movie is Sonic the Hedgehog 3. A close second is Iron Man 1.</li>
         </ul>
         <h3>Interesting Facts</h3>
-        <h6>I don't really know why you'd want to know these things, but here they are regardless.
+        <h6>I don't really know why you'd want to know these things, but here they are regardless.</h6>
             <ul>
                 <li>I have no siblings.</li>
                 <li>I grew up in New York.</li>
